New features, change section and main mage

--- a/www.hookamonk.com/src/html/components/header2.njk
+++ b/www.hookamonk.com/src/html/components/header2.njk
@@ -80,6 +80,7 @@
   </div>
   <nav id="navigation" class="tm-menu">
     <ul class="tm-menu__list">
+      <p>External links</p>
       <li><a href="https://shop.hookamonk.com/">E-shop</a></li>
       <li><a href="/catering">I want it for my lounge</a></li>
     </ul>
