--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -35,27 +35,29 @@ body {
         font-size: 78px;
         font-weight: 400;
         line-height: 94px;
-        margin: 0;
+        margin: 10px 0 10px 0;
     }
     h2 {
         font-size: 48px;
         font-weight: 400;
         line-height: 58px;
-        margin-top: 0;
+        margin: 10px 0 10px 0;
     }
     h3,
     h4 {
         font-size: 24px;
-        font-weight: 700;
+        font-weight: 400;
         line-height: 30px;
         color: var(--hm-grey--dark);
         margin-bottom: 0;
+        display: inline;
     }
     p {
         font-size: 18px;
         font-weight: 400;
         line-height: 30px;
         color: var(--hm-grey--light);
+        margin: 10px 0 10px 0;
     }
 }
 
@@ -68,6 +70,10 @@ ul {
 
 a {
     text-decoration: none;
+}
+
+h3 {
+    display: inline;
 }
 
 p {
@@ -130,8 +136,8 @@ p {
         background-color: var(--hm-orange);
         transition: all 0.8s;
         a {
-        color: var(--hm-white);
-        transition: all 0.8s;
+            color: var(--hm-white);
+            transition: all 0.8s;
         }
     }
     @media screen and (min-width: 840px) {
@@ -148,8 +154,8 @@ p {
         background-color: var(--hm-orange);
         transition: all 0.8s;
         a {
-        color: var(--hm-white);
-        transition: all 0.8s;
+            color: var(--hm-white);
+            transition: all 0.8s;
         }
     }
 }
