--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -41,15 +41,15 @@ body {
         font-size: 48px;
         font-weight: 400;
         line-height: 58px;
-        margin: 10px 0 10px 0;
+        margin-top: 0;
     }
     h3,
     h4 {
         font-size: 24px;
-        font-weight: 400;
+        font-weight: 700;
         line-height: 30px;
         color: var(--hm-grey--dark);
-        margin-bottom: 0;
+        margin-bottom: 0px;
         display: inline;
     }
     p {
