Hookamonk - features, stylizace

--- a/www.hookamonk.com/src/stylesheets/v2/main.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/main.scss
@@ -64,7 +64,7 @@ main .material-icons {
 }
 
 .material-icons--neutral {
-    border: 0px solid var(--hm-grey--lighter);
+    border: 0 solid var(--hm-grey--lighter);
     background-color: var(--hm-orange);
     box-shadow: 6px 6px var(--hm-grey--lighter);
 }
