--- a/www.hookamonk.com/src/stylesheets/v2/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/catering.scss
@@ -1,278 +1,315 @@
 // Catering Page //
 @media (max-width: 839px) {
-    img {
-        width: 100%;
-        height: auto;
-    }
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media screen and (min-width: 840px) {
-    img.optimalization {
-        width: 100%;
-        height: auto;
-    }
+  img.optimalization {
+    width: 100%;
+    height: auto;
+  }
 }
 
 // Section 1: Introduction AKA Header Info //
 .hm-intro {
-    background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke-2.jpg");
-    background-position: 0 100px;
-    background-repeat: no-repeat;
-    height: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    .hm-intro__header-bg {
-        picture {
-            z-index: 100;
-        }
+  background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke-2.jpg");
+  background-position: 0 100px;
+  background-repeat: no-repeat;
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  .hm-intro__header-bg {
+    picture {
+      z-index: 100;
     }
+  }
 }
 
 //
 // Section 2: Partners //
 .hm-partners {
-    text-align: center;
-    background-color: var(--hm-bg--light);
-    h2 {
-        font-size: 28px;
-        line-height: 30px;
+  text-align: center;
+  background-color: var(--hm-bg--light);
+
+  h2 {
+    font-size: 28px;
+    line-height: 30px;
+  }
+
+  .hm-partners__logo {
+    svg {
+      padding: 0 1em;
     }
-    .hm-partners__logo {
-        svg {
-            padding: 0 1em;
-        }
-    }
+  }
 }
 
 //
 // Section 3: About AKA HM Story
 .hm-about {
-    background-image: cloudinaryUrl("hookamonk.com/bg_story-smoke.jpg");
-    background-color: var(--hm-bg--light);
-    background-size: cover;
-    background-position: 100% 100%;
-    background-repeat: no-repeat;
-    .hm-about__text {
-        align-self: center;
-    }
+  background-image: cloudinaryUrl("hookamonk.com/bg_story-smoke.jpg");
+  background-color: var(--hm-bg--light);
+  background-size: cover;
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+
+  .hm-about__text {
+    align-self: center;
+  }
 }
 
 //
 // Section 4: Features
 .hm-features {
-    text-align: center;
-    .hm-features__content {
-        @media (max-width: 439px) {
-            margin-bottom: 2em;
-        }
+  text-align: center;
+
+  .hm-features__content {
+    background-color: var(--hm-orange);
+    h3 {
+      font-size: 20px;
+      font-weight: normal;
     }
+    @media (max-width: 439px) {
+      margin-bottom: 2em;
+    }
+  }
+
+  .material-icons {
+    align-self: center;
+    border-radius: 0;
+    margin-bottom: 0;
+    svg {
+      padding: 0 10px 0;
+    }
+  }
+
+  .material-icons--neutral {
+    box-shadow: none;
+  }
 }
 
 .card {
-    text-align: left;
-    border: 1px solid var(--hm-grey--lighter);
-    border-radius: 1em;
-    padding: 20px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.07);
+  border-radius: 20px;
+  display: inline-flex;
+  text-align: left;
 }
 
 .wrap-collabsible {
-    margin-bottom: 1.2rem 0;
+  background-color: #FFF;
+  padding: 14px 10px 10px;
+  @media screen and (max-width: 840px) {
     padding-bottom: 0;
-    @media screen and (max-width: 840px) {
-        padding-bottom: 0;
-    }
+  }
 }
 
 input[type='checkbox'] {
-    display: none;
+  display: none;
 }
 
 .lbl-toggle {
-    display: block;
-    text-align: left;
-    cursor: pointer;
-    transition: all 0.25s ease-out;
+  display: block;
+  text-align: left;
+  cursor: pointer;
+  transition: all 0.25s ease-out;
 }
 
 .lbl-toggle:hover {
-    color: var(--hm-orange);
+  color: var(--hm-orange);
 }
 
-.lbl-toggle::before {
-    content: ' ';
-    display: inline-block;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    border-left: 10px solid currentColor;
-    vertical-align: middle;
-    margin-right: .7rem;
-    transform: translateY(-2px);
-    transition: transform .2s ease-out;
+.lbl-toggle::after {
+  content: url("assets/img/icon_expand.svg");
+  display: block;
+  width: 30px;
+  height: 30px;
+  text-align: center;
 }
 
-.toggle:checked+.lbl-toggle::before {
-    transform: rotate(90deg) translateX(-3px);
+.toggle:checked + .lbl-toggle::before {
+  transform: rotate(90deg) translateX(-3px);
 }
 
 .collapsible-content {
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height .25s ease-in-out;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height .25s ease-in-out;
 }
 
-.toggle:checked+.lbl-toggle+.collapsible-content {
-    max-height: 100vh;
-    transition: max-height 1s ease-in-out;
+.toggle:checked + .lbl-toggle + .collapsible-content {
+  max-height: 100vh;
+  transition: max-height 1s ease-in-out;
 }
 
-.toggle:checked+.lbl-toggle {
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+.toggle:checked + .lbl-toggle {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
-.collapsible-content .content-inner {}
+.collapsible-content .content-inner {
+}
 
 //
 // Section 5: Testimonials
 .hm-testimonials {
+  color: var(--hm-white);
+  text-align: center;
+  background-color: var(--hm-grey--dark);
+
+  .hm-testimonials__content {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 40px;
     color: var(--hm-white);
-    text-align: center;
-    background-color: var(--hm-grey--dark);
-    .hm-testimonials__content {
-        font-size: 22px;
-        font-weight: 400;
-        line-height: 40px;
-        color: var(--hm-white);
-        max-width: 740px;
-        margin: 1em auto;
+    max-width: 740px;
+    margin: 1em auto;
+  }
+
+  .hm-testimonials__logo {
+    margin-bottom: 3em;
+
+    svg {
+      padding: 0 1em;
     }
-    .hm-testimonials__logo {
-        margin-bottom: 3em;
-        svg {
-            padding: 0 1em;
-        }
+  }
+
+  .facts {
+    .facts__number {
+      font-size: 68px;
+      font-weight: 700;
+      line-height: 80px;
     }
-    .facts {
-        .facts__number {
-            font-size: 68px;
-            font-weight: 700;
-            line-height: 80px;
-        }
-        .facts__text {
-            color: var(--hm-grey--lighter);
-        }
+
+    .facts__text {
+      color: var(--hm-grey--lighter);
     }
+  }
 }
 
 //
 // Section 6: Warp
 .hm-warp {
-    text-align: center;
+  text-align: center;
+
+  .hm-warp__type {
+    text-align: left;
+    border-radius: 10px;
+    @media (max-width: 839px) {
+      padding: 0 18px 38px;
+    }
+    @media (min-width: 840px) {
+      padding: 3em 3em 4em;
+    }
+
+    h3,
+    h4,
+    p {
+      color: var(--hm-white);
+      margin-bottom: 0;
+    }
+
+    h3 {
+      font-size: 48px;
+      font-weight: 700;
+      line-height: 58px;
+    }
+
+    button {
+      margin-top: 2em;
+    }
+  }
+
+  @media (max-width: 1000px) {
     .hm-warp__type {
-        text-align: left;
-        border-radius: 10px;
-        @media (max-width: 839px) {
-            padding: 0 18px 38px;
-        }
-        @media (min-width: 840px) {
-            padding: 3em 3em 4em;
-        }
-        h3,
-        h4,
-        p {
-            color: var(--hm-white);
-            margin-bottom: 0;
-        }
-        h3 {
-            font-size: 48px;
-            font-weight: 700;
-            line-height: 58px;
-        }
-        button {
-            margin-top: 2em;
-        }
+      background-color: var(--hm-grey--dark);
     }
-    @media (max-width: 1000px) {
-        .hm-warp__type {
-            background-color: var(--hm-grey--dark);
-        }
+  }
+  @media (min-width: 1001px) and (max-width: 1139px) {
+    .hm-warp__type--b2b {
+      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b-3.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
     }
-    @media (min-width: 1001px) and (max-width: 1139px) {
-        .hm-warp__type--b2b {
-            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b-3.jpg");
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-        .hm-warp__type--b2c {
-            background-image: cloudinaryUrl("hookamonk.com/bbg_warp-b2c-3.jpg");
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-        .hm-warp__type--b2d {
-            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2d-3.jpg");
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
+    .hm-warp__type--b2c {
+      background-image: cloudinaryUrl("hookamonk.com/bbg_warp-b2c-3.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
     }
-    @media screen and (min-width: 1140px) {
-        .hm-warp__type--b2b {
-            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b-3.jpg");
-            /*background-size: auto 100%;*/
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-        .hm-warp__type--b2c {
-            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2c-3.jpg");
-            /*background-size: auto 100%;*/
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-        .hm-warp__type--b2d {
-            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2d-3.jpg");
-            /*background-size: auto 100%;*/
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
+    .hm-warp__type--b2d {
+      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2d-3.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
     }
+  }
+  @media screen and (min-width: 1140px) {
+    .hm-warp__type--b2b {
+      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b-3.jpg");
+      /*background-size: auto 100%;*/
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    .hm-warp__type--b2c {
+      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2c-3.jpg");
+      /*background-size: auto 100%;*/
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    .hm-warp__type--b2d {
+      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2d-3.jpg");
+      /*background-size: auto 100%;*/
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+  }
 }
 
 //
 // Section 7: Other Products
 .hm-products {
-    background-color: var(--hm-bg--light);
-    .title {
-        text-align: center;
-    }
-    .hm-product-type {
-        box-shadow: 0 100px 100px rgba(0, 0, 0, 0.12);
-        border-radius: 10px;
-        .hm-product-type__link {
-            padding-top: 1em;
-            a {
-                font-size: 18px;
-                font-weight: 600;
-                color: var(--hm-grey--dark);
-                text-decoration: none;
-                &:hover {
-                    cursor: pointer;
-                    color: var(--hm-orange);
-                    transition: all 0.3s;
-                }
-            }
+  background-color: var(--hm-bg--light);
+
+  .title {
+    text-align: center;
+  }
+
+  .hm-product-type {
+    box-shadow: 0 100px 100px rgba(0, 0, 0, 0.12);
+    border-radius: 10px;
+
+    .hm-product-type__link {
+      padding-top: 1em;
+
+      a {
+        font-size: 18px;
+        font-weight: 600;
+        color: var(--hm-grey--dark);
+        text-decoration: none;
+
+        &:hover {
+          cursor: pointer;
+          color: var(--hm-orange);
+          transition: all 0.3s;
         }
+      }
     }
-    .hm-product-type__inner {
-        flex-grow: 1;
-        justify-content: space-between;
-        padding: 1.5em 2em 2em;
-    }
-    .hm-product-type,
-    .hm-product-type__inner {
-        display: flex;
-        flex-direction: column;
-    }
+  }
+
+  .hm-product-type__inner {
+    flex-grow: 1;
+    justify-content: space-between;
+    padding: 1.5em 2em 2em;
+  }
+
+  .hm-product-type,
+  .hm-product-type__inner {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 //
