[www.hackercamp.cz] Update dates of next Hackercamp - WIP 2022

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -421,9 +421,8 @@
       </svg>
     </div>
     <div class="hc-navbar__right mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-      <a class="hc-link hc-navbar__link" href="https://g.page/sobenak?share">Navigovat</a>
-      <a class="hc-link hc-navbar__link" href="/program/">Program</a>
-      <a class="hc-link hc-navbar__link" href="/faq/">Často kladené dotazy</a>
+      <!-- a class="hc-link hc-navbar__link" href="https://g.page/sobenak?share">Navigovat</a-->
+      <a class="hc-link hc-navbar__link" href="/faq/">FAQ</a>
       <a
         class="hc-link hc-link--decorated"
         href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
@@ -445,7 +444,14 @@
           Zažijte nultý ročník netradičního třídenního festivalu pro lidi
           z&nbsp;české tech scény.
         </p>
-        <p>2.&ndash;5. září 2021 na Sobeňáku</p>
+        <p>1.&ndash;4. září 2022 na Sobeňáku</p>
+        <p>
+          <a
+            class="hc-cta"
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
+          >Chci se zapojit</a>
+        </p>
+        <!--
         <p>Vjezd do areálu je chráněn značkou zákaz vjezdu. Nelekni se. Ta napovídá správný směr. Pokračuj</p>
         <p>
           <a
@@ -453,6 +459,7 @@
             class="hc-cta"
           >Navigovat</a>
         </p>
+        -->
       </div>
       <div
         class="hc-camp-detail mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
@@ -721,17 +728,17 @@
         <h3 class="hc-text--gay">První týden v&nbsp;září</h3>
         <p>
           Začínáme ve čtvrtek
-          <time property="startDate" datetime="2021-09-02"
-          >2.&nbsp;září
+          <time property="startDate" datetime="2022-09-01"
+          >1.&nbsp;září
           </time>
           a končíme v&nbsp;neděli
-          <time property="endDate" datetime="2021-09-05">5.&nbsp;září</time>
+          <time property="endDate" datetime="2022-09-04">4.&nbsp;září</time>
           v&nbsp;poledne, hned jak se proberete po good-bye&nbsp;party.
         </p>
         <p style="margin: 2em 0 0">
           <a
             class="hc-icon-link"
-            href="http://www.google.com/calendar/event?action=TEMPLATE&amp;dates=20210902%2F20210906&amp;text=Hacker%20Camp&amp;location=Sobe%C5%88%C3%A1k%2C%20Star%C3%BD%20Ro%C5%BEmit%C3%A1l%20148%2C%20Ro%C5%BEmit%C3%A1l%20pod%20T%C5%99em%C5%A1%C3%ADnem&amp;details=Za%C5%BEijte%20nult%C3%BD%20ro%C4%8Dn%C3%ADk%20netradi%C4%8Dn%C3%ADho%20t%C5%99%C3%ADdenn%C3%ADho%20festivalu%20pro%20lidi%20z%20%C4%8Desk%C3%A9%20tech%20sc%C3%A9ny."
+            href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;dates=20220901/20220905&amp;text=Hacker+Camp&amp;location=Sobe%C5%88%C3%A1k,+Star%C3%BD+Ro%C5%BEmit%C3%A1l+148,+Ro%C5%BEmit%C3%A1l+pod+T%C5%99em%C5%A1%C3%ADnem&amp;details=Za%C5%BEijte+prvn%C3%AD+ro%C4%8Dn%C3%ADk+netradi%C4%8Dn%C3%ADho+t%C5%99%C3%ADdenn%C3%ADho+festivalu+pro+lidi+z+%C4%8Desk%C3%A9+tech+sc%C3%A9ny.&amp;sf=true"
           >
             <svg
               aria-hidden="true"
