--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -440,8 +440,8 @@
       </svg>
     </div>
     <div class="hc-navbar__right mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-      <a class="hc-link hc-navbar__link" href="https://g.page/sobenak?share">Navigovat</a>
-      <a class="hc-link hc-navbar__link" href="/program/">Program</a>
+      <!--a class="hc-link hc-navbar__link" href="https://g.page/sobenak?share">Navigovat</a-->
+      <!--a class="hc-link hc-navbar__link" href="/program/">Program</a-->
       <a
         class="hc-link hc-link--decorated"
         href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
