--- a/www.hackercamp.cz/src/html/pro-hackery/index.njk
+++ b/www.hackercamp.cz/src/html/pro-hackery/index.njk
@@ -180,6 +180,7 @@
 
     .hc-card {
       background-color: var(--hc-background-color);
+      border: 1px solid #f2f2f2;
       box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.07);
       padding: var(--mdc-layout-grid-gutter-phone);
     }
@@ -292,6 +293,11 @@
       z-index: 1000;
     }
 
+    .hc-navbar__link {
+      line-height: 56px;
+      margin-right: 2em;
+    }
+
     #top {
       padding-top: 78px;
     }
@@ -325,6 +331,29 @@
       #top {
         padding-top: 100px;
       }
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 2em;
+    }
+    [typeof="Question"]:target {
+      scroll-margin-top: 7em;
+    }
+    [typeof="Question"] [property="name"] {
+      padding-right: 48px;
+      margin: 0;
+    }
+    [typeof="Question"]:target [property="name"]{
+      border-bottom: 1px solid #f2f2f2;
+      padding-bottom: 32px;
+      margin-bottom: 32px;
+    }
+    [typeof="Question"] [typeof="Answer"] {
+      display:none;
+    }
+    [typeof="Question"]:target [typeof="Answer"] {
+      display: block;
     }
 
   </style>
@@ -363,12 +392,7 @@
   <!-- End Google Tag Manager -->
 </head>
 
-<body vocab="https://schema.org" typeof="Festival">
-<link property="eventStatus" href="https://schema.org/EventScheduled"/>
-<link
-  property="eventAttendanceMode"
-  href="https://schema.org/MixedEventAttendanceMode"
-/>
+<body>
 <!-- Google Tag Manager (noscript) -->
 <noscript>
   <iframe
@@ -415,6 +439,8 @@
       </svg>
     </div>
     <div class="hc-navbar__right mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <!--a class="hc-link hc-navbar__link" href="https://g.page/sobenak?share">Navigovat</a-->
+      <!--a class="hc-link hc-navbar__link" href="/program/">Program</a-->
       <a
         class="hc-link hc-link--decorated"
         href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
@@ -423,16 +449,94 @@
   </div>
 </nav>
 
-<main class="mdc-layout-grid">
+<div class="hc-code-bg">
+  <header id="top" class="hc-hero mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div
+        id="prezentace"
+        class="hc-hero__inner mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop"
+      >
+        <iframe
+          id="talk_frame_794585"
+          class="speakerdeck-iframe"
+          src="https:////speakerdeck.com/player/9363b64af28a4a57b2fb85fa37240944"
+          width="710"
+          height="399"
+          style="aspect-ratio:710/399; border:0; padding:0; margin:2em auto; width: 100%; height: auto; max-width: 1400px; background:transparent;"
+          allowtransparency="true"
+          allowfullscreen></iframe>
+        <h1>Vyhodnocení Hacker camp 2021</h1>
+      </div>
+    </div>
+  </header>
+</div>
+
+<main class="mdc-layout-grid" style="max-width: 60em;">
   <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell">
-      <a href="https://docs.google.com/document/d/1ZPFgR_m0-eGe7sn5Npi2F1AYNSBnWGGI0CBrAvVjnR8/edit#heading=h.th510l1n79f8">Informace pro účastníky</a>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <h2 id="toc-ahoj-taborniku">Ahoj, táborníku!</h2>
+
+      <p>Čas letí jako voda. Už to budou víc jak dva měsíce, co jsi
+        opustil/opustila tábořiště. Chvíli nám v&nbsp;Crew trvalo spočítat všechny
+        výdaje a výnosy, zpracovat vaši zpětnou vazbu a rozhodnout se, jak to
+        udělat s&nbsp;dalším ročníkem. Ale už máme za náš společný nultý
+        ročník všechno info pohromadě. Nehodláme si ho nechat jen pro sebe. Takže
+        pokud tě zajímají všechny podrobnosti, koukni se na <a href="#prezentace">prezentaci</a>, co
+        připravil&nbsp;Kuba.</p>
+
+      <h2 id="toc-tldr">TLDR</h2>
+
+      <p><strong>Nultý ročník skončil v&nbsp;plusu. O&nbsp;tom, co udělat s&nbsp;penězi,
+          můžeš pomoci rozhodnout hlasováním na Slacku.</strong> Možnosti jsou
+        různorodé&nbsp;&ndash; od věnování peněz neziskovkám, přes slevu pro letošní
+        táborníky na další ročník, až po společnou party. Pojďte nám říct,
+        jakou variantu preferujete → <a href="https://hackercampworkspace.slack.com/archives/C01V4Q0AZ0U">šup zahlasovat na slack</a>. Na to, abys nám
+        řekl/řekla, co si o&nbsp;tom myslíš, máš měsíc, tak neváhej a dej nám
+        vědět. :) Chceme, aby nám zahlasovala minimálně třetina táborníků. Tak
+        nenuť Irču psát další texty a rovnou nám řekni, co by se ti nejvíc
+        líbilo.&nbsp;Díky.</p>
+
+      <p><strong>Hacker Camp 1.0&nbsp;bude!</strong> Takže pokud chceš jet, diáře
+        vytáhnout teď! Zapiš si datum <strong>1.-4.&nbsp;září 2022</strong>, kdy se na
+        Tebe zase na Sobeňáku budeme těšit. Vyslyšeli jsme zpětnou vazbu části
+        z&nbsp;vás&nbsp;&ndash; camp nebude masovka&nbsp;&ndash; bude nás maximálně dvojnásobek. Takže
+        pokud chceš využít svoji výhodu, že. jsi nám věřil, když ještě nikdo
+        nevěděl, jak bude nultý ročník Hacker Campu vypadat, můžeš si místo pro
+        sebe rezervovat už dnes. A&nbsp;protože vás máme rádi, máme ještě jednu
+        nabídku. <strong>Když se registruješ a zaplatíš vstup do konce května
+          2022, budeš mít možnost si s&nbsp;sebou na camp vzít jednoho člověka.</strong>
+        Vybírej prosím někoho, kdo na camp zapadne. Někoho s&nbsp;kým bys sám rád
+        strávil/ráda strávila tři dny v&nbsp;chatce, kdyby lilo jako z&nbsp;konve. Traviče
+        studní nech doma, nebo expeduj na cestu kolem světa. Registrace na webu už je
+        spuštěná a snažili jsme se minimalizovat počet formů na vyplňování. Do
+        konce května za crew nikoho dalšího nezveme a čekáme, zda využiješ
+        nabídky a vezmeš s&nbsp;sebou dalšího táborníka právě ty&nbsp;:)</p>
+
+      <p>Máš otázky? <a href="mailto:team&#64;hackercamp.cz">Napiš</a>, nebo <a
+          href="https://hackercampworkspace.slack.com/archives/C01V4Q0AZ0U">se nás zeptej
+          na Slacku</a>.</p>
+
+      <p>My se těšíme, že uvidíme, jak bys chtěl/chtěla, abychom naložili
+        s&nbsp;výnosem z&nbsp;letoška a hlavně se těšíme na viděnou v&nbsp;září!</p>
+
+      <p>Hacker Camp Crew: Kuba, Kosi, Pája, Kačka, Kája, Pavel, Aleš, Jirka
+        a&nbsp;Ir</p>
+
+      <p>PS: <a href="https://drive.google.com/drive/folders/1J3s4P-OrXsxoJRs_SpW1axhVPqmguuND">Fotky
+        z&nbsp;nultého ročníku</a> najdete na našem Google Drive a můžete se tam podělit i o ty své!</p>
     </div>
   </div>
+
 </main>
 
 <footer class="mdc-layout-grid">
   <p style="text-align: center">© 2021 Hacker Camp</p>
 </footer>
+<script type="module">
+  const stylesheet = document.createElement("link");
+  stylesheet.rel = "stylesheet";
+  stylesheet.href = "/assets/css/main.css";
+  document.head.appendChild(stylesheet);
+</script>
 </body>
 </html>
