[www.hackercamp.cz] Updated Form link and wording in hacker zone

--- a/www.hackercamp.cz/src/html/pro-hackery/index.njk
+++ b/www.hackercamp.cz/src/html/pro-hackery/index.njk
@@ -443,7 +443,7 @@
       <!--a class="hc-link hc-navbar__link" href="/program/">Program</a-->
       <a
         class="hc-link hc-link--decorated"
-        href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
+        href="https://docs.google.com/forms/d/e/1FAIpQLScYlv1ginKjyss_66JmsOGNGZpahg27NDoAe2nNUXHd7H1eqQ/viewform"
       >Chci se zapojit</a>
     </div>
   </div>
@@ -478,7 +478,7 @@
 
       <p>Čas letí jako voda. Už to budou víc jak dva měsíce, co jsi
         opustil/opustila tábořiště. Chvíli nám v&nbsp;Crew trvalo spočítat všechny
-        výdaje a výnosy, zpracovat vaši zpětnou vazbu a rozhodnout se, jak to
+        výdaje a příjmy, zpracovat vaši zpětnou vazbu a rozhodnout se, jak to
         udělat s&nbsp;dalším ročníkem. Ale už máme za náš společný nultý
         ročník všechno info pohromadě. Nehodláme si ho nechat jen pro sebe. Takže
         pokud tě zajímají všechny podrobnosti, koukni se na <a href="#prezentace">prezentaci</a>, co
@@ -489,12 +489,13 @@
       <p><strong>Nultý ročník skončil v&nbsp;plusu. O&nbsp;tom, co udělat s&nbsp;penězi,
           můžeš pomoci rozhodnout hlasováním na Slacku.</strong> Možnosti jsou
         různorodé&nbsp;&ndash; od věnování peněz neziskovkám, přes slevu pro letošní
-        táborníky na další ročník, až po společnou party. Pojďte nám říct,
-        jakou variantu preferujete → <a href="https://hackercampworkspace.slack.com/archives/C01V4Q0AZ0U">šup zahlasovat na slack</a>. Na to, abys nám
-        řekl/řekla, co si o&nbsp;tom myslíš, máš měsíc, tak neváhej a dej nám
-        vědět. :) Chceme, aby nám zahlasovala minimálně třetina táborníků. Tak
-        nenuť Irču psát další texty a rovnou nám řekni, co by se ti nejvíc
-        líbilo.&nbsp;Díky.</p>
+        táborníky na další ročník, až po společnou party. Pojď nám říct,
+        jakou variantu  či jaké varianty preferuješ →
+        <a href="https://hackercampworkspace.slack.com/archives/C01V4Q0AZ0U">šup zahlasovat na Slack</a>.
+        Na to, abys nám řekl/řekla, co si o&nbsp;tom myslíš, máš měsíc,
+        tak neváhej a dej nám vědět. :) Chceme, aby nám zahlasovala minimálně
+        třetina táborníků. Tak nenuť Irču psát další texty a rovnou nám řekni,
+        co by se ti nejvíc líbilo.&nbsp;Díky.</p>
 
       <p><strong>Hacker Camp 1.0&nbsp;bude!</strong> Takže pokud chceš jet, diáře
         vytáhnout teď! Zapiš si datum <strong>1.-4.&nbsp;září 2022</strong>, kdy se na
@@ -504,11 +505,12 @@
         nevěděl, jak bude nultý ročník Hacker Campu vypadat, můžeš si místo pro
         sebe rezervovat už dnes. A&nbsp;protože vás máme rádi, máme ještě jednu
         nabídku. <strong>Když se registruješ a zaplatíš vstup do konce května
-          2022, budeš mít možnost si s&nbsp;sebou na camp vzít jednoho člověka.</strong>
+          2022, budeš mít možnost si s&nbsp;sebou na camp vzít jednoho dalšího hackera.</strong>
         Vybírej prosím někoho, kdo na camp zapadne. Někoho s&nbsp;kým bys sám rád
         strávil/ráda strávila tři dny v&nbsp;chatce, kdyby lilo jako z&nbsp;konve. Traviče
-        studní nech doma, nebo expeduj na cestu kolem světa. Registrace na webu už je
-        spuštěná a snažili jsme se minimalizovat počet formů na vyplňování. Do
+        studní nech doma, nebo expeduj na cestu kolem světa.
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScYlv1ginKjyss_66JmsOGNGZpahg27NDoAe2nNUXHd7H1eqQ/viewform">Registrace
+          na webu už je spuštěná</a> a snažili jsme se minimalizovat počet formů na vyplňování. Do
         konce května za crew nikoho dalšího nezveme a čekáme, zda využiješ
         nabídky a vezmeš s&nbsp;sebou dalšího táborníka právě ty&nbsp;:)</p>
 
@@ -517,7 +519,7 @@
           na Slacku</a>.</p>
 
       <p>My se těšíme, že uvidíme, jak bys chtěl/chtěla, abychom naložili
-        s&nbsp;výnosem z&nbsp;letoška a hlavně se těšíme na viděnou v&nbsp;září!</p>
+        se&nbsp;ziskem z&nbsp;letoška a hlavně se těšíme na viděnou v&nbsp;září!</p>
 
       <p>Hacker Camp Crew: Kuba, Kosi, Pája, Kačka, Kája, Pavel, Aleš, Jirka
         a&nbsp;Ir</p>
